# navigation_cafe

./: README.md
robot_behaviour_tree/: CMakeLists.txt  package.xml
robot_behaviour_tree/include/robot_behaviour_tree/: go_to_target.hpp  navigate_to_target.hpp  wait_for_confirmation.hpp  wait_for_confirmation_condition.hpp
robot_behaviour_tree/launch/: servers.launch.py
robot_behaviour_tree/src/: go_to_target.cpp  navigate_to_target.cpp  wait_for_confirmation.cpp  wait_for_confirmation_condition.cpp
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/action/: GoToTarget.action
robot_interfaces/srv/: WaitForConfirmation.srv
robot_navigation/: package.xml  setup.py
robot_navigation/behavior_trees/: bt.xml
robot_navigation/launch/: tb3_simulation_launch.py
robot_navigation/maps/: cafe.pgm  cafe.yaml
robot_navigation/params/: nav2_params.yaml
robot_navigation/worlds/: cafe.model  cafe.world
